--- a/sources/src/sass/blocks/_clothes.scss
+++ b/sources/src/sass/blocks/_clothes.scss
@@ -40,6 +40,7 @@
       padding-top: 44.3%;
     }
     img {
+      pointer-events: none;
       width: 100%;
       object-fit: cover;
       position: absolute;
